fix layout.css, prevent overflow and reduce size of the main container

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -6,6 +6,7 @@
 
 .main>.content {
     width: 100%;
+    max-width: calc(100% - 300px);
     margin: 10px;
     display: flex;
     flex-direction: column;
@@ -21,6 +22,7 @@
 .sidebar {
     display: flex;
     width: 300px;
+    min-width: 300px;
     flex-direction: column;
     margin: 10px;
     border-left: 1px solid rgba(255, 255, 255, 0.1);
@@ -37,10 +39,10 @@
         flex-direction: column;
         align-items: center;
     }
-    .content,
+    .main>.content,
     .sidebar {
+        max-width: 100%;
         margin: 0;
-        width: 100%;
     }
     .sidebar {
         border: none;
